fixed the UserInfo DTO & Added admin to requests